<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CSCI571Homework9</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Property_heading">Search Your Property Here</string>
    <string name="Address">Address*:</string>
    <string name="City">City*:</string>
    <string name="State">State*:</string>
    <string name="warning">This field is required</string>
    <string name="noaddr">No exact match found-- Verify that the given address is correct</string>
    <string name="moredetails">See more details om Zillow:</string>
    <string name="homelink"></string>
    <string name="propertytype">Property Type</string>
    <string name="yearBuilt">Year Built</string>
    <string name="lotsize">Lot Size</string>
    <string name="finishedarea">Finished Area</string>
    <string name="bathroom">Bathrooms</string>
    <string name="bedroom">Bedrooms</string>
    <string name="taxyear">Tax Assessment Year</string>
    <string name="taxassess">Tax Assessment</string>
    <string name="lastsold">Last Sold Price</string>
    <string name="lastsolddate">Last Sold Date</string>
    <string name="zestimate">Zestimate &#174;Property Estimate</string>
    <string name="zestimate2">as of</string>
    <string name="thirtydaysoverall">30 Days Overall Change</string>
    <string name="AllTimePropertyRange">All Time Property Range</string>
    <string name="RentZestimate">Rent Zestimate &#174; Valuation as of</string>
    <string name="thirtydaysrentchange">30 Days Rent Change</string>
    <string name="alltimerentrange">All Time Rent Range</string>
    <string-array name="state">
        <item>Choose State</item>
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
    <string name="hstone">Historical Zestimate for the past 1 year</string>
    <string name="hstfive">Historical Zestimate for the past 5 years</string>
    <string name="hstten">Historical Zestimate for the past 10 years</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="warningcharts">Preview of the charts not available</string>
    <string name="title_activity_zillowresult">Results From Zillow</string>
    <string name="title_activity_charts_info">Results from Zillow</string>
    <string name="title_activity_table_info">Results from Zillow</string>

</resources>
